# deep_ecg_2025

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: mit_bih.yaml
configs/infer/: infer.yaml
configs/model/: simple_cnn.yaml
configs/preprocess/: default.yaml
configs/train/: train.yaml
outputs/2026-01-13/14-44-23/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-13/14-46-34/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-13/14-47-05/.hydra/: config.yaml  hydra.yaml
src/: export.py  infer.py  model.py  preprocess.py  train.py
