[project]
name = "deep-ecg-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "hydra-core>=1.3.2",
    "lightning>=2.6.0",
    "mlflow>=3.8.1",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
]
